--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,12 @@
       <img src="src/assets/img/perro comio la tarea.jpg" />
       <p class="alert alert-warning mt-4" />
       <p id="Excuse">My Dog Eat My Homework</p>
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
-      </div>
+      <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
+    </div>
+    <div class="container-fluid text-center">
+      <button id="reset_button">Reset</button>
+      <button id="generate_button">Generate</button>
+    </div>
     </div>
   </body>
 </html>
